add hackerrank profile handle

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 </div>
                 <h2>Leetcode</h2>
             </div></a>
-            <a href="https://www.instagram.com/mohit.rana18" target="_main"><div class="sites">
+            <a href="https://www.hackerrank.com/mohitr8998" target="_main"><div class="sites">
                 <div class="sitelogo">
-                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-hackerrank"></i>
                 </div>
-                <h2>Instagram</h2>
+                <h2>HackerRank</h2>
             </div></a>
             <a href="https://wa.me/+919690463547" target="_main"><div class="sites">
                 <div class="sitelogo">
