add twiteer handle and change profile pic to webp format

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="content">
         <div id="dp">
             <div id="pp">
-                <img src="images/profilepicc.png">
+                <img src="images/profilepicc.webp">
              </div>
              <h1>mohit rana</h1>
         </div>
@@ -28,7 +28,7 @@
             </div></a>
             <a href="https://www.linkedin.com/in/mohitrana18" target="_main"></span><div class="sites">
                 <div class="sitelogo">
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </div>
                 <h2>Linkedin</h2>
             </div></a>
@@ -50,11 +50,11 @@
                 </div>
                 <h2>HackerRank</h2>
             </div></a>
-            <a href="https://wa.me/+919690463547" target="_main"><div class="sites">
+            <a href="https://x.com/MohitRana178635" target="_main"><div class="sites">
                 <div class="sitelogo">
-                    <i class="fa-brands fa-whatsapp"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
                 </div>
-                <h2>Whatsapp</h2>
+                <h2>X-Twitter</h2>
             </div></a>
             <a href="mailto:mohitr8998@gmail.com" target="_main"><div class="sites">
                 <div class="sitelogo">
